done for the day

--- a/overview_generalized_roy/lecture.ipynb
+++ b/overview_generalized_roy/lecture.ipynb
@@ -184,6 +184,17 @@
     }
    },
    "source": [
+    "<img src=\"material/fig-margin-indifference.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "<img src=\"material/fig-eh-marginal-effect.png\">"
    ]
   },
@@ -232,6 +243,17 @@
     " \\omega^{TT}(x, u_S) & = \\frac{1 - F_{P\\mid X=x}(u_S)}{E[P \\mid X = x]}\\\\\n",
     " \\omega^{TUT}(x, u_S) & = \\frac{F_{P\\mid X=x}(u_S)}{E[1 - P \\mid X = x]}\n",
     "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<img src=\"material/fig-weights-marginal-effect.png\">"
    ]
   }
  ],
