--- a/intro_nlsy_dataset/lecture.ipynb
+++ b/intro_nlsy_dataset/lecture.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "# Introduction to Data Analytics using Python"
+    "# Introduction to the NLSY Dataset"
    ]
   }
  ],
