--- a/intro_github_authorea/lecture.ipynb
+++ b/intro_github_authorea/lecture.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# Small Introduction to Github and Authorea\n"
+    "# Introduction to Github and Authorea\n"
    ]
   },
   {
