--- a/overview_generalized_roy/lecture.ipynb
+++ b/overview_generalized_roy/lecture.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "## The Generalized Roy Model\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\text{Potential Outcomes} &\\qquad \\text{Cost} \\\\\n",
     "Y_1 = \\mu_1(X) + U_1      &\\qquad C = \\mu_D(Z) + U_C \\\\\n",
     "Y_0 = \\mu_0(X) + U_0      &\\qquad \\\\\n",
@@ -30,7 +30,44 @@
     "\\text{Observed Outcomes } &\\qquad \\text{Choice} \\\\\n",
     "Y = D Y_1 + (1 - D)Y_0 &\\qquad S = Y_1 - Y_0 - C \\\\\n",
     "                       &\\qquad D = \\mathrm{I}[S < 0] \\\\\n",
-    "\\end{align}"
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Fundamental Evaluation Problems\n",
+    "\n",
+    "* **Evaluation Problem** We only observe an individual in either the treated or untreated state.\n",
+    "\n",
+    "* **Selection Problem** Individuals that select into treatment different from those that do not."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Evaluation Problem\n",
+    "\n",
+    "Observed outcome for individual $i$:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "Y_i = Y_{0i} + D_i (Y_{1i} - Y_{0i}) = \n",
+    "\\begin{cases}\n",
+    "Y_{1i} & \\text{if}\\quad D_i = 1 \\\\\n",
+    "Y_{0i} & \\text{if}\\quad D_i = 0 \\\\\n",
+    "\\end{cases}\n",
+    "\\end{align*}\n",
+    "\n"
    ]
   },
   {
@@ -167,11 +204,50 @@
     }
    },
    "source": [
+    "### Selection Problem\n",
+    "\n",
+    "\n",
+    "\\begin{align*}\n",
+    "E[Y\\mid D = 1] - E[Y\\mid D = 0] & = \\underbrace{E[Y_1 - Y_0]}_{B^{ATE}} + \\underbrace{E[Y_1 - Y_0 \\mid D = 1] - E[Y_1 - Y_0]}_{\\text{Sorting Gain}} \\\\\n",
+    "& + \\underbrace{E[Y_0\\mid D = 1] - E[Y_0 \\mid D = 0]}_{\\text{Selection Bias}}\n",
+    "\\end{align*}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Selection Problem\n",
+    "\n",
+    "\n",
+    "\\begin{align*}\n",
+    "E[Y\\mid D = 1] - E[Y\\mid D = 0] & = \\underbrace{E[Y_1 - Y_0\\mid D = 1]}_{B^{TT}} \\\\\n",
+    "& + \\underbrace{E[Y_0\\mid D= 1]- E[Y_0 \\mid D = 0]}_{\\text{Selection Bias}}\n",
+    "\\end{align*}\n",
+    "\n",
+    "\n",
+    "$\\Rightarrow$ the bias depends on the parameter of interest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### Marginal Benefit of Treatment\n",
+    "<br>\n",
     "\n",
     "\\begin{align*}\n",
     "B^{MTE}(x, u_S) = E [Y_1 - Y_0 \\mid X = x, U_S = u_S]\n",
     "\\end{align*}\n",
+    "<br>\n",
     "\n",
     "**Intuition** Mean gross return to treatment for persons at quantile $u_S$ of the first-stage unobservable $V$."
    ]
@@ -206,7 +282,20 @@
     }
    },
    "source": [
-    "<img src=\"material/fig-treatment-effects.png\">"
+    "**Treatment Effects with Essential Heterogenity**\n",
+    "<img src=\"material/fig-treatment-effects-with-eh.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "**Treatment Effects without Essential Heterogenity**\n",
+    "<img src=\"material/fig-treatment-effects-without-eh.png\">"
    ]
   },
   {
@@ -254,6 +343,82 @@
    },
    "source": [
     "<img src=\"material/fig-weights-marginal-effect.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Distributional Effects of Treatment\n",
+    "\n",
+    "* Marginal Distribution of Benefits\n",
+    "\n",
+    "* Joint Distribution of Potential Outcomes\n",
+    "\n",
+    "* Joint Distribution of Benefits and Surplus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<img src=\"material/fig-treatment-effects-benefits.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<img src=\"material/fig-distribution-potential.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<img src=\"material/fig-distribution-surplus.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Local Average Treatment Effect\n",
+    "\n",
+    "\\begin{align*}\n",
+    "LATE(x, u_S, u_{S^\\prime}) = \\frac{1}{u_S - u_{S^\\prime}} \\int_{u_S}^{u_{S^\\prime}} B^{MTE}(x, u) du,\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<img src=\"material/fig-local-average-treatment.png\">"
    ]
   }
  ],
