Added reference in the GRM lecture

--- a/overview_generalized_roy/lecture.ipynb
+++ b/overview_generalized_roy/lecture.ipynb
@@ -420,6 +420,84 @@
    "source": [
     "<img src=\"material/fig-local-average-treatment.png\">"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<h1><center>References</center></h1>\n",
+    "\n",
+    "* Abbring, J. and Heckman J. J. (2007). Econometric Evaluation of Social Programs, Part III: Distributional Treatment Effects, Dynamic Treatment Effects, Dynamic Discrete Choice, and General Equilibrium Policy Evaluation. In Heckman, J. J. and Leamer, E. E., editors, *Handbook of Econometrics*, volume 6B, pages 5145-5303. Elsevier Science, Amsterdam, Netherlands.\n",
+    "\n",
+    "\n",
+    "* Carneiro, P., Hansen, K., and Heckman, J. J. (2003).Estimating Distributions of Treatment Effects with an Application to the Returns to Schooling and Measurement of the Effects of Uncertainty on College Choice. *International Economic Review*, 44(2):361-422.\n",
+    "\n",
+    "\n",
+    "* Carneiro, P., Heckman, J. J., and Vytlacil, E. J. (2011). Estimating Marginal Returns to Education. *American Economic Review*, 101(6):2754-2781.\n",
+    "\n",
+    "\n",
+    "* Heckman, J. J. (1990). Micro Data, Heterogeneity, and the Evaluation of Public Policy: Nobel Lecture. *Journal of Political Economy*, 109(4):673-748.\n",
+    "\n",
+    "\n",
+    "* Heckman, J. J. (2008). Econometric Causality. *International Statistical Review*, 76(1):1-27."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<h1><center>References</center></h1>\n",
+    "\n",
+    "* Heckman, J. J., Smith, J., and Clements, N. (1997). Making the Most Out of Programme Evaluations and Social Experiments: Accounting for Heterogeneity in Programme Imapcts. *The Review of Economics Studies*, 64(4): 487-535.\n",
+    "\n",
+    "\n",
+    "* Heckman, J. J.  and Vytlacil, E. J. (2006b). Understanding Instrumental Variables in Models with Essential Heterogeneity. *The Review of Economics and Statistics*, 88(3):389-432.\n",
+    "\n",
+    "\n",
+    "* Heckman, J. J.  and Vytlacil, E. J. (2001a). Local Instrumental Variables. In Hsiao, C. Morimune, K., and Powell, J., editors, *Nonlinear Statistical Modeling: Proceedings of the Thirteenth International Symposium in Economic Theory and Econometrics: Essay in Honor of Takeshi Amemiya*, pages 1-46. Cambridge University Press, Cambridge, United Kingdom.\n",
+    "\n",
+    "\n",
+    "* Heckman, J. J.  and Vytlacil, E. J. (2001b). Policy-Relevant Treatment Effects. *American Economic Review*, 91(2):107-111.\n",
+    "\n",
+    "\n",
+    "* Heckman, J. J.  and Vytlacil, E. J. (2005). Structural Equations, Treatment Effects, and Econometric Policy Evaluation. *Econometrica*, 73(3):669-739."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<h1><center>References</center></h1>\n",
+    "\n",
+    "* Heckman, J. J.  and Vytlacil, E. J. (2007a). Econometric Evaluation of Social Programs, Part I: Causal Models, Structural Models and Econometric Policy Evaluation. In Heckman, J. J. and Leamer, E. E., editors, *Handbook of Econometrics*, volume 6b, pages 4779-4874. Elsevier Science, Amsterdam, Netherlands.\n",
+    "\n",
+    "\n",
+    "* Heckman, J. J.  and Vytlacil, E. J. (2007b). Econometric Evaluation of Social Programs, Part II: Using the Marginal Treatment Effect to Organize Alternative Economic Estimators to Evaluate Social Programs and to Forcast their Effects in New Enviroments. In Heckman, J. J. and Leamer, E. E., editors, *Handbook of Econometrics*, volume 6b, pages 4875-4874. Elsevier Science, Amsterdam, Netherlands.\n",
+    "\n",
+    "\n",
+    "* Roy, A. D. (1951). Some Thoughts on the Distribution of Earnings.*Oxford Economic Papers*, 3(2):135-146."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -439,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
