--- a/overview_generalized_roy/lecture.ipynb
+++ b/overview_generalized_roy/lecture.ipynb
@@ -20,6 +20,25 @@
     }
    },
    "source": [
+    "### Policy Evaluation Tasks\n",
+    "\n",
+    "Heckman (2008) defines three policy evaluation tasks:\n",
+    "\n",
+    "* Evaluating the impact of historical interventions on outcomes including their impact in terms of well-being of the treated and the society at large.\n",
+    "\n",
+    "* Forecasting the impact of historical interventions implemented in one environment in other environments, including their impact in terms of well-being.\n",
+    "\n",
+    "* Forecasting the impacts of interventions never historically experienced to various environments, including their impact on well-being."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## The Generalized Roy Model\n",
     "\n",
     "\\begin{align*}\n",
@@ -41,7 +60,26 @@
     }
    },
    "source": [
-    "### Fundamental Evaluation Problems\n",
+    "### Conventional Notation\n",
+    "\n",
+    "\\begin{align*}\n",
+    "Y = \\alpha + \\beta D + \\epsilon,\n",
+    "\\end{align*}\n",
+    "\n",
+    "where $\\alpha = \\mu_0(X)$, $\\beta = (Y_1 - Y_0) =\\mu_1(X) - \\mu_0(X)  + (U_1 - U_0)$, and $\\epsilon=U_0$.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Econometric Problems\n",
     "\n",
     "* **Evaluation Problem** We only observe an individual in either the treated or untreated state.\n",
     "\n",
@@ -102,17 +140,7 @@
     }
    },
    "source": [
-    "### Assumptions\n",
-    "\n",
-    "* The term $\\mu_D(Z)$ is a nondegenerate random variable conditional on $X$.\n",
-    "\n",
-    "* The random vectors $(U_1, U_C)$ and $(U_0, U_C)$ are independent of $Z$ conditional on $X$.\n",
-    "\n",
-    "* The distribution of $U_C$ is absolutely continuous with Lebesgue measure.\n",
-    "\n",
-    "* The values $E[Y_1]$ and $E[Y_0]$ are finite.\n",
-    "\n",
-    "* $1 > Pr(D=1 \\mid X) > 0$."
+    "## Agent Heterogeneity"
    ]
   },
   {
@@ -123,7 +151,17 @@
     }
    },
    "source": [
-    "<img src=\"material/fig-common-support.png\">"
+    "### Individual - Specific Effect of Treatment\n",
+    "\n",
+    "\\begin{align*}\n",
+    "Y_1 - Y_0 = (\\mu_1(X) - \\mu_0(X)) + (U_1 - U_0)\\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "Sources of Heterogeneity\n",
+    "* Difference in Observable Characteristics\n",
+    "* Difference in Unobservable Characteristics\n",
+    "    * Uncertainty\n",
+    "    * Private Information"
    ]
   },
   {
@@ -164,17 +202,7 @@
     }
    },
    "source": [
-    "### Individual - Specific Effect of Treatment\n",
-    "\n",
-    "\\begin{align*}\n",
-    "Y_1 - Y_0 = (\\mu_1(X) - \\mu_0(X)) + (U_1 - U_0)\\\\\n",
-    "\\end{align*}\n",
-    "\n",
-    "Sources of Heterogeneity\n",
-    "* Difference in Observable Characteristics\n",
-    "* Difference in Unobservable Characteristics\n",
-    "    * Uncertainty\n",
-    "    * Private Information"
+    "## Parameters of Interest"
    ]
   },
   {
@@ -186,6 +214,7 @@
    },
    "source": [
     "### Conventional Treatment Effects\n",
+    "<br>\n",
     "\n",
     "\\begin{align*}\n",
     "B^{ATE} & = E[Y_1 - Y_0 ]\\\\\n",
@@ -205,7 +234,7 @@
    },
    "source": [
     "### Selection Problem\n",
-    "\n",
+    "<br>\n",
     "\n",
     "\\begin{align*}\n",
     "E[Y\\mid D = 1] - E[Y\\mid D = 0] & = \\underbrace{E[Y_1 - Y_0]}_{B^{ATE}} + \\underbrace{E[Y_1 - Y_0 \\mid D = 1] - E[Y_1 - Y_0]}_{\\text{Sorting Gain}} \\\\\n",
@@ -231,6 +260,53 @@
     "\n",
     "\n",
     "$\\Rightarrow$ the bias depends on the parameter of interest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "**Treatment Effects with Essential Heterogeneity**\n",
+    "<img src=\"material/fig-treatment-effects-conventional.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "**Treatment Effects without Essential Heterogenity**\n",
+    "<img src=\"material/fig-treatment-effects-without-eh.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Policy - Relevant Average Treatment Effect\n",
+    "<br>\n",
+    "\n",
+    "**Observed Outcomes**\n",
+    "\\begin{align*}\n",
+    "Y_B = D_B Y_1 + (1 - D_B) Y_0 \\\\\n",
+    "Y_A = D_A Y_1 + (1 - D_A) Y_0 \\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "**Effect of Policy**\n",
+    "\\begin{align*}\n",
+    "B^{PRTE} = \\frac{1}{E[D_A] - E[D_B]} (E[Y_A] - E[Y_B])\n",
+    "\\end{align*}\n"
    ]
   },
   {
@@ -282,30 +358,6 @@
     }
    },
    "source": [
-    "**Treatment Effects with Essential Heterogenity**\n",
-    "<img src=\"material/fig-treatment-effects-with-eh.png\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "**Treatment Effects without Essential Heterogenity**\n",
-    "<img src=\"material/fig-treatment-effects-without-eh.png\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "### Effects of Treatment as Weighted Averages\n",
     "\n",
     "Parameter $\\Delta_j$, can be written as a weighted average of the $B^{MTE}(x, u_S)$.\n",
@@ -343,6 +395,60 @@
    },
    "source": [
     "<img src=\"material/fig-weights-marginal-effect.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Local Average Treatment Effect\n",
+    "\n",
+    "**Local Average Treatment Effect** Average effect for those induced to change treatment because of a change in the instrument.\n",
+    "\n",
+    "* instrument-dependet parameter\n",
+    "\n",
+    "**Marginal Treatment Effect** Average effect for those individuals with a given unobserved desire to receive treatment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "\\begin{align*}\n",
+    "B^{LATE} = \\frac{E(Y\\mid Z = z) - E[Y \\mid Z = z^\\prime]}{P(X,Z) - P(X,Z^\\prime)}\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "\\begin{align*}\n",
+    "B^{LATE}(x, u_S, u_{S^\\prime}) = \\frac{1}{u_S - u_{S^\\prime}} \\int_{u_S}^{u_{S^\\prime}} B^{MTE}(x, u) du,\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<img src=\"material/fig-local-average-treatment.png\">"
    ]
   },
   {
@@ -403,23 +509,17 @@
     }
    },
    "source": [
-    "### Local Average Treatment Effect\n",
-    "\n",
-    "\\begin{align*}\n",
-    "LATE(x, u_S, u_{S^\\prime}) = \\frac{1}{u_S - u_{S^\\prime}} \\int_{u_S}^{u_{S^\\prime}} B^{MTE}(x, u) du,\n",
-    "\\end{align*}"
+    "## References"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
+    "collapsed": true
    },
-   "source": [
-    "<img src=\"material/fig-local-average-treatment.png\">"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
