workon on slides continued

--- a/overview_generalized_roy/lecture.ipynb
+++ b/overview_generalized_roy/lecture.ipynb
@@ -9,7 +9,8 @@
     }
    },
    "source": [
-    "# Overview on the Generalized Roy Model"
+    "# Overview on the Generalized Roy Model\n",
+    "<font size=\"3\"> ... background material available at <a href=\"https://github.com/policyMetrics/talks\">https://github.com/policyMetrics/talks</a>  </font>"
    ]
   },
   {
@@ -40,6 +41,7 @@
    },
    "source": [
     "## The Generalized Roy Model\n",
+    "<br>\n",
     "\n",
     "\\begin{align*}\n",
     "\\text{Potential Outcomes} &\\qquad \\text{Cost} \\\\\n",
@@ -48,7 +50,7 @@
     "    & \\\\\n",
     "\\text{Observed Outcomes } &\\qquad \\text{Choice} \\\\\n",
     "Y = D Y_1 + (1 - D)Y_0 &\\qquad S = Y_1 - Y_0 - C \\\\\n",
-    "                       &\\qquad D = \\mathrm{I}[S < 0] \\\\\n",
+    "                       &\\qquad D = \\mathrm{I}[S > 0] \\\\\n",
     "\\end{align*}"
    ]
   },
@@ -61,14 +63,19 @@
    },
    "source": [
     "### Conventional Notation\n",
+    "<br>\n",
     "\n",
     "\\begin{align*}\n",
     "Y = \\alpha + \\beta D + \\epsilon,\n",
     "\\end{align*}\n",
     "\n",
-    "where $\\alpha = \\mu_0(X)$, $\\beta = (Y_1 - Y_0) =\\mu_1(X) - \\mu_0(X)  + (U_1 - U_0)$, and $\\epsilon=U_0$.\n",
+    "where \n",
     "\n",
-    "\n"
+    "\\begin{align*}\n",
+    "\\alpha &= \\mu_0(X)  \\\\\n",
+    "\\beta  & = (Y_1 - Y_0) =\\mu_1(X) - \\mu_0(X)  + (U_1 - U_0)\\\\\n",
+    "\\epsilon & =U_0\n",
+    "\\end{align*}"
    ]
   },
   {
@@ -117,6 +124,7 @@
    },
    "source": [
     "### Useful Notation\n",
+    "<br>\n",
     "\n",
     "\\begin{align*}\n",
     "\\mu_S(X, Z) & = (\\mu_1(X) - \\mu_0(X)) - \\mu_C(Z) \\\\\n",
@@ -152,6 +160,7 @@
    },
    "source": [
     "### Individual - Specific Effect of Treatment\n",
+    "<br>\n",
     "\n",
     "\\begin{align*}\n",
     "Y_1 - Y_0 = (\\mu_1(X) - \\mu_0(X)) + (U_1 - U_0)\\\\\n",
@@ -177,7 +186,7 @@
     "**Definition** Individuals select their treatment status based on gains unobservable by the econometrician. More formally,\n",
     "\n",
     "\\begin{align*}\n",
-    "Y_1 - Y_0 \\perp D\\quad \\mid X = x\n",
+    "Y_1 - Y_0 \\not\\perp D\\quad \\mid X = x\n",
     "\\end{align*}\n",
     "\n",
     "$\\Rightarrow$ consequences for the choice of the estimation strategy"
@@ -222,7 +231,7 @@
     "B^{TUT} & = E[Y_1 - Y_0 \\mid D = 0]\\\\\n",
     "\\end{align*}\n",
     "\n",
-    "* correspond to *extreme* policy alternatives\n"
+    "$\\Rightarrow$ correspond to *extreme* policy alternatives\n"
    ]
   },
   {
@@ -251,7 +260,7 @@
    },
    "source": [
     "### Selection Problem\n",
-    "\n",
+    "<br>\n",
     "\n",
     "\\begin{align*}\n",
     "E[Y\\mid D = 1] - E[Y\\mid D = 0] & = \\underbrace{E[Y_1 - Y_0\\mid D = 1]}_{B^{TT}} \\\\\n",
@@ -298,12 +307,14 @@
     "<br>\n",
     "\n",
     "**Observed Outcomes**\n",
+    "\n",
     "\\begin{align*}\n",
     "Y_B = D_B Y_1 + (1 - D_B) Y_0 \\\\\n",
     "Y_A = D_A Y_1 + (1 - D_A) Y_0 \\\\\n",
     "\\end{align*}\n",
     "\n",
     "**Effect of Policy**\n",
+    "\n",
     "\\begin{align*}\n",
     "B^{PRTE} = \\frac{1}{E[D_A] - E[D_B]} (E[Y_A] - E[Y_B])\n",
     "\\end{align*}\n"
@@ -409,9 +420,11 @@
     "\n",
     "**Local Average Treatment Effect** Average effect for those induced to change treatment because of a change in the instrument.\n",
     "\n",
-    "* instrument-dependet parameter\n",
+    "$\\Rightarrow$ instrument-dependet parameter\n",
     "\n",
-    "**Marginal Treatment Effect** Average effect for those individuals with a given unobserved desire to receive treatment."
+    "**Marginal Treatment Effect** Average effect for those individuals with a given unobserved desire to receive treatment.\n",
+    "\n",
+    "$\\Rightarrow$ deep economic parameter\n"
    ]
   },
   {
@@ -509,6 +522,28 @@
     }
    },
    "source": [
+    "## Teaching Tool"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<img src=\"material/fig-online-documentation.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## References"
    ]
   },
@@ -520,8 +555,6 @@
     }
    },
    "source": [
-    "<h1><center>References</center></h1>\n",
-    "\n",
     "* Abbring, J. and Heckman J. J. (2007). [Econometric Evaluation of Social Programs, Part III: Distributional Treatment Effects, Dynamic Treatment Effects, Dynamic Discrete Choice, and General Equilibrium Policy Evaluation.](http://www.sciencedirect.com/science/article/pii/S1573441207060722) In Heckman, J. J. and Leamer, E. E., editors, *Handbook of Econometrics*, volume 6B, pages 5145-5303. Elsevier Science, Amsterdam, Netherlands.\n",
     "\n",
     "\n",
@@ -545,8 +578,6 @@
     }
    },
    "source": [
-    "<h1><center>References</center></h1>\n",
-    "\n",
     "* Heckman, J. J., Smith, J., and Clements, N. (1997). [Making the Most Out of Programme Evaluations and Social Experiments: Accounting for Heterogeneity in Programme Impacts.](https://www.jstor.org/stable/2971729) *The Review of Economics Studies*, 64(4): 487-535.\n",
     "\n",
     "\n",
@@ -570,8 +601,6 @@
     }
    },
    "source": [
-    "<h1><center>References</center></h1>\n",
-    "\n",
     "* Heckman, J. J.  and Vytlacil, E. J. (2007a). [Econometric Evaluation of Social Programs, Part I: Causal Models, Structural Models and Econometric Policy Evaluation.](http://www.sciencedirect.com/science/article/pii/S1573441207060709) In Heckman, J. J. and Leamer, E. E., editors, *Handbook of Econometrics*, volume 6b, pages 4779-4874. Elsevier Science, Amsterdam, Netherlands.\n",
     "\n",
     "\n",
@@ -580,15 +609,6 @@
     "\n",
     "* Roy, A. D. (1951). [Some Thoughts on the Distribution of Earnings.](https://www.jstor.org/stable/2662082) *Oxford Economic Papers*, 3(2):135-146."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -608,7 +628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
