--- a/overview_generalized_roy/lecture.ipynb
+++ b/overview_generalized_roy/lecture.ipynb
@@ -436,7 +436,7 @@
    },
    "source": [
     "\\begin{align*}\n",
-    "B^{LATE} = \\frac{E(Y\\mid Z = z) - E[Y \\mid Z = z^\\prime]}{P(X,Z) - P(X,Z^\\prime)}\n",
+    "B^{LATE} = \\frac{E(Y\\mid Z = z) - E[Y \\mid Z = z^\\prime]}{P(z) - P(z^\\prime)}\n",
     "\\end{align*}"
    ]
   },
