Edits on intro slides

--- a/intro_github_authorea/Git & Authorea Introduction.ipynb
+++ b/intro_github_authorea/Git & Authorea Introduction.ipynb
@@ -8,7 +8,54 @@
     }
    },
    "source": [
-    "# Introduction to Github and Authorea\n"
+    "# Introduction to Git/Github and Authorea\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Authorea \n",
+    "\n",
+    "\n",
+    "* [Authorea](https://www.authorea.com/) is an online platform for creating collaborative documents with a focus on technical and data-driven topics. \n",
+    "\n",
+    "* We will use the platform for the collaborative writing projects. \n",
+    "\n",
+    "* You should be able to sign in via your GitHub Account.\n",
+    "\n",
+    "* The comment feature will be used to provide feedback for your work/project by your fellow students.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Some Examples\n",
+    "\n",
+    "* We will explore some basic features of Authorea: \n",
+    "  \n",
+    "   * using LaTeX for formulas\n",
+    "   \n",
+    "   * implementing images\n",
+    "   \n",
+    "   * commenting projects\n",
+    "   \n",
+    "   * adding references\n",
+    "   \n",
+    "\n",
+    "* For more information see: [Authorea documentation](https://intercom.help/authorea)\n",
+    "\n",
+    "* [Guide](https://www.authorea.com/users/5713/articles/28015-how-to-write-advanced-latex-latex-for-power-users) for implementing LaTeX code in Authorea "
    ]
   },
   {
@@ -25,13 +72,26 @@
     "* Git:\n",
     "    * Open source Version control project\n",
     "    \n",
-    "    * Command line tool\n",
+    "    * Command line tool\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Git Example\n",
     "\n",
+    "1. You write a draft\n",
     "\n",
-    "* GitHub?\n",
-    "    * Git repository hosting service\n",
-    "    \n",
-    "    * Provides a Web-based graphical interface"
+    "2. You save the draft\n",
+    "\n",
+    "3. Add new sections or edit already existing stuff\n",
+    "\n",
+    "4. Save the new version again"
    ]
   },
   {
@@ -74,6 +134,8 @@
     "    * OS: https://git-scm.com/download/mac\n",
     "    \n",
     "    * Linux: Use your package manager\n",
+    "    \n",
+    "* Note that Git commands are executed from a command line interface, but there are also many applications that provide a graphical user interface (for instance: https://www.gitkraken.com/) \n",
     "\n",
     "\n",
     "   \n",
@@ -89,10 +151,13 @@
     }
    },
    "source": [
-    "## Some Examples\n",
+    "## Git and GitHub\n",
     "\n",
+    "* GitHub?\n",
     "\n",
-    "Some small examples (clone, commit, create a new branch, merge changes ...)"
+    "    * Git repository hosting service\n",
+    "    \n",
+    "    * Provides a Web-based graphical interface"
    ]
   },
   {
@@ -162,50 +227,10 @@
     }
    },
    "source": [
-    "## Authorea \n",
-    "\n",
-    "\n",
-    "* [Authorea](https://www.authorea.com/) is an online platform for creating collaborative documents with a focus on technical and data-driven topics. \n",
-    "\n",
-    "* We will use the platform for the collaborative writing projects. \n",
-    "\n",
-    "* You should be able to sign in via your GitHub Account.\n",
-    "\n",
-    "* The comment feature will be used to provide feedback for your work/project by your fellow students.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "## Some Examples\n",
     "\n",
-    "* We will explore some basic features of Authorea: \n",
-    "   \n",
-    "   * using LaTeX for formulas\n",
-    "   \n",
-    "   * implementing images\n",
-    "   \n",
-    "   * commenting projects\n",
-    "   \n",
-    "   * adding references\n",
-    "\n",
-    "* For more information see: [Authorea documentation](https://intercom.help/authorea)"
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
