--- a/returns_to_education/slides/header.tex
+++ b/returns_to_education/slides/header.tex
@@ -63,6 +63,8 @@
 \usepackage{amsfonts}
 
 \usepackage{graphicx}
+\graphicspath{{../material/}}
+
 \usepackage{caption}
 
 \usepackage{tikz}
@@ -100,6 +102,10 @@
 \newcommand{\notindep}{\ensuremath{\perp\!\!\!\!\!\!\diagup\!\!\!\!\!\!\perp}}%
 
 \newcommand{\mc}{\multicolumn}
+
+
+
+
 
 \newcommand{\ph}{\phantom}
 % weitere Optionen:
