--- a/returns_to_education/slides/main.tex
+++ b/returns_to_education/slides/main.tex
@@ -52,12 +52,18 @@ Why are returns to education important?
 \end{frame}
 
 \begin{frame}\nocite{Mincer.1958,Mincer.1974}
-\textbf{Mincer Equation}
+\textbf{Mincer Equation}\\
 \begin{align*}
-Y(s, x) = \alpha + \rho_s s + \beta_0 x + \beta_1 x^2 + \epsilon
+\ln Y(s, x) = \alpha + \rho_s s + \beta_0 x + \beta_1 x^2 + \epsilon\\
 \end{align*}
+$\Rightarrow$ How to interpret the \textit{Mincer Coefficient} $\rho_s$?
+\end{frame}
 
-Conceptual Frameworks
+
+
+
+\begin{frame}
+\textbf{Conceptual Frameworks}
 \begin{itemize}
 \item compensating differences model
 \item accounting-identity model
@@ -84,8 +90,7 @@ Equalizing present value of earnings across schooling levels:
 \ln Y(s) = \ln Y(0) + r s + \ln\left(\frac{1 -e^{-rs}}{1 - e^{-r(T - s)}}\right) \\
 \end{align*}
 
-$\Rightarrow$ $\rho_s$ equals the market interest rate
-
+$\Rightarrow$ $\rho_s$ equals the market interest rate and the internal rate of return to schooling by construction.
 \end{frame}
 
 \begin{frame}
@@ -121,7 +126,7 @@ Model Features:
 \begin{align*}
 P_t & \equiv P_{t - 1} (1 + k_{t - 1} \rho_{t - 1}) \equiv \prod^{t - 1}_{j= 0} (1 + \rho_jk_j)P_0 \\
 & \\
-\ln P_t & \equiv \ln P_0  + s \ln(1 + \rho_s) + \sum^{t -1}_{j=2} \ln(1 + \rho_0 k_j) \\
+\ln P_t & \equiv \ln P_0  + s \ln(1 + \rho_s) + \sum^{t -1}_{j=s} \ln(1 + \rho_0 k_j) \\
 & \approx  \ln P_0 + s \rho_s + \rho_0 \sum^{t - 1}_{j=s} k_j
 \end{align*}
 \end{frame}
@@ -137,7 +142,7 @@ k_{s + x} = \kappa\left( 1 - \frac{x}{T}\right),\text{where} \quad x = t - s
 
 \begin{frame}
 \begin{figure}[htp]\centering
-\caption{Post-School Investment}\label{Post-School Investment}\scalebox{0.50}{\includegraphics{fig-mincer-post-school}}
+\caption{Post-School Investment}\label{Post-School Investment}\scalebox{0.30}{\includegraphics{fig-mincer-post-school}}
 \end{figure}
 \end{frame}
 
@@ -162,7 +167,7 @@ where
 \begin{align*}
 \alpha & =\ln P_0 - \kappa \\
 \beta_0 & = \left(\rho_0\kappa + \frac{\rho_0\kappa}{2T} + \frac{\kappa}{T}\right) \\
-\beta_1 & = \frac{\rho_0\kappa}{2T}
+\beta_1 & = -\frac{\rho_0\kappa}{2T}
 \end{align*}
 \end{frame}
 
@@ -234,6 +239,12 @@ $\Rightarrow$ If the schooling decision is determined by individual returns, the
 \end{frame}
 
 
+\begin{frame}
+\begin{figure}[htp]\centering
+\caption{Mincerian Variance Profiles}\label{Mincerian Variance Profiles}\scalebox{0.3}{\includegraphics{fig-mincer-equation-variance}}
+\end{figure}
+\end{frame}
+
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 \begin{frame}\begin{center}
@@ -281,6 +292,20 @@ $\Rightarrow$ If the schooling decision is determined by individual returns, the
 \includegraphics[width=.90\columnwidth]{fig-mincer-variance-1980}
 \end{center}
 \end{frame}
+
+
+\begin{frame}
+In the end, \citet{Heckman.2006a} conclude:\vspace{0.5cm}
+
+\begin{quote}
+In common usage, the coefficient on schooling in a regression of log earnings on
+years of schooling is often called a rate of return. In fact, it is a price of schooling from
+a hedonic market wage equation. It is a growth rate of market earnings with years of
+schooling and not an internal rate of return measure, except under stringent conditions
+which we specify, test and reject in this chapter.
+\end{quote}
+\end{frame}
+
 
 %!TEX root = ../main.tex
 \beginbackup\appendix
